# sp1-aptos

./: .gitignore  Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/aptos_test_utils/: error.rs  mod.rs  wrapper.rs
core/src/crypto/: error.rs  hash.rs  mod.rs  sig.rs
core/src/merkle/: mod.rs  node.rs  sparse_proof.rs  transaction_proof.rs
core/src/types/: block_info.rs  epoch_state.rs  error.rs  ledger_info.rs  mod.rs  transaction.rs  trusted_state.rs  utils.rs  validator.rs  waypoint.rs
programs/epoch-change/: Cargo.toml
programs/epoch-change/elf/: riscv32im-succinct-zkvm-elf
programs/epoch-change/src/: main.rs
programs/inclusion/: Cargo.toml
programs/inclusion/elf/: riscv32im-succinct-zkvm-elf
programs/inclusion/src/: main.rs
script/: Cargo.toml  build.rs
script/benches/: proof_server.rs
script/src/: epoch_change.rs  error.rs  inclusion.rs  lib.rs  types.rs
