[package]
version = "0.1.0"
name = "inclusion-program"
edition = "2021"

[workspace]

[dependencies]
sp1-zkvm = "2.0.0"
aptos-lc-core = { path = "../../core", package = "aptos-lc-core", default-features = false }

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", branch = "patch-v0.8.0" }
